@@ -4,7 +4,7 @@
 # Packages essential to this app. Needed by anyone who wants to use this app.
 # ===========================================================================
 django==1.4.3
-django-libs==0.17
+django-libs
 django-cms==2.3.5
 # There is a problem with STATIC_FILES in the latest commit (as of 2012-02)
 -e git+git://github.com/fivethreeo/cmsplugin-blog.git@cd91a4eb066437aa254574759eed51da973314ab#egg=cmsplugin_blog
