@@ -1,5 +1,8 @@
 === ongoing ===
 
+
+- Using the MultilingualPublishMixin from django-libs
+
 === 0.6.1 ===
 
 - changed the way we filter for published items. We MUST have the LANGUAGE_CODE
